# learning-particle-advection

./: .gitignore  README.md
LearningParticleAdvection/LearningParticleAdvection/: ABCTimeSeriesVectorField.h  ABCVectorField.cpp  ABCVectorField.h  LearningParticleAdvection.cpp  ParamaterizedVectorField.cpp  ParamaterizedVectorField.h  ParameterizedTimeSeriesVectorField.h  ParameterizedVectorField.cpp  ParameterizedVectorField.h  VTKProcessor.h
src/: CMakeLists.txt  Main.cpp  Makefile  Start  Start.cpp
src/archtypes/: ParameterizedSteadyVectorField.cpp  ParameterizedSteadyVectorField.h  ParameterizedTimeSeriesVectorField.cpp  ParameterizedUnsteadyVectorField.cpp  ParameterizedUnsteadyVectorField.h
src/dataio/: VTKProcessor.h
src/fields/: ABCSteadyVectorField.cpp  ABCSteadyVectorField.h  ABCTimeSeriesVectorField.cpp  ABCUnsteadyVectorField.cpp  ABCUnsteadyVectorField.h
src/utils/: NP.h
